force-app/main/default/objects/Cleanup_Config__c/Cleanup_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Cleanup Config</label>
</CustomObject>