force-app/main/default/objects/Cleanup_Config__c/fields/Older_Than_x_Days__c.field-meta.xml
<CustomField>
    <fullName>Older_Than_x_Days__c</fullName>
    <label>Older Than x Days</label>
    <length>80</length>
    <type>Text</type>
</CustomField>