force-app/main/default/objects/Cleanup_Config__c/fields/Unit_of_Time__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Time__c</fullName>
    <label>Unit of Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>